@@ -22,8 +22,8 @@ description = """Configures the Davis Vantage weather station."""
 
 usage="""%prog: [config_file] [--help] [--info] [--clear]
                            [--set-interval=SECONDS] [--set-altitude=FEET] [--set-barometer=inHg] 
-                           [--set-bucket=CODE] [--set-rain-year-start=MM] [--set-time]
-                           [--set-lamp=['on'|'off]] [--dump] [--logger_summary=FILE] [--start | --stop]"""
+                           [--set-bucket=CODE] [--set-rain-year-start=MM] [--set-time] [--set-dst=['AUTO'|'ON'|'OFF']]
+                           [--set-lamp=['ON'|'OFF']] [--dump] [--logger_summary=FILE] [--start | --stop]"""
 
 epilog = """Mutating actions will request confirmation before proceeding."""
 
@@ -56,6 +56,7 @@ def main():
     parser.add_option("--set-rain-year-start", type=int, dest="set_rain_year_start", metavar="MM", 
                       help="Set the rain year start (1=Jan, 2=Feb, etc.).")
     parser.add_option("--set-time", action="store_true", dest="set_time", help="Set the onboard clock to the current time.")
+    parser.add_option("--set-dst",  dest="set_dst",  help="Set DST to 'ON', 'OFF', or 'AUTO'", metavar="AUTO|ON|OFF")
     parser.add_option("--set-lamp", dest="set_lamp", help="Turn the console lamp 'ON' or 'OFF'", metavar="ON|OFF")
     parser.add_option("--start", action="store_true", help="Start the logger.")
     parser.add_option("--stop",  action="store_true", help="Stop the logger.")
@@ -91,6 +92,8 @@ def main():
         set_rain_year_start(station, options.set_rain_year_start)
     if options.set_time:
         set_time(station)
+    if options.set_dst:
+        set_dst(station, options.set_dst)
     if options.set_lamp:
         set_lamp(station, options.set_lamp)
     if options.start:
@@ -312,6 +315,10 @@ def set_time(station):
     newtime_ts = station.getTime()
     print "Current console time is %s" % weeutil.weeutil.timestamp_to_string(newtime_ts)
 
+def set_dst(station, dst):
+    station.setDST(dst) 
+    print "Set DST on console to '%s'" % dst
+    
 def set_lamp(station, onoff):
     print "Setting lamp on console..."
     station.setLamp(onoff)
